// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerificationRequestToast should render a cross-user verification 1`] = `
<div>
  <div>
    <div
      class="mx_Toast_description"
    >
      <p
        class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40"
      >
        @alice:domain (@other:user)
      </p>
    </div>
    <div
      aria-live="off"
      class="mx_Toast_buttons"
    >
      <button
        class="_button_zt6rp_17"
        data-kind="secondary"
        data-size="sm"
        role="button"
        tabindex="0"
      >
        Ignore
      </button>
      <button
        class="_button_zt6rp_17"
        data-kind="primary"
        data-size="sm"
        role="button"
        tabindex="0"
      >
        Verify Session
      </button>
    </div>
  </div>
</div>
`;

exports[`VerificationRequestToast should render a self-verification 1`] = `
<div>
  <div>
    <div
      class="mx_Toast_description"
    >
      <p
        class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40"
      >
        my other device
      </p>
      <div
        class="mx_Toast_detail"
      >
        other_device from 1.1.1.1
      </div>
    </div>
    <div
      aria-live="off"
      class="mx_Toast_buttons"
    >
      <button
        class="_button_zt6rp_17"
        data-kind="secondary"
        data-size="sm"
        role="button"
        tabindex="0"
      >
        Ignore
      </button>
      <button
        class="_button_zt6rp_17"
        data-kind="primary"
        data-size="sm"
        role="button"
        tabindex="0"
      >
        Verify Session
      </button>
    </div>
  </div>
</div>
`;
